--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "js-cookie": "^2.2.1",
     "less": "^4.1.1",
     "nprogress": "^0.2.0",
