--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dayjs": "^1.10.4",
     "js-cookie": "^2.2.1",
     "less": "^4.1.1",
+    "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
